[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_trading_objects"
version = "0.1.0"
description = "A Python library for managing trading objects with type safety and precision control."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
maintainers = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
keywords = [
    "trading",
    "finance",
    "cryptocurrency",
    "decimal",
    "precision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
    "setuptools>=61.0",
    "wheel",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/venantvr/Python.Trading.Objects"
Repository = "https://github.com/venantvr/Python.Trading.Objects.git"
Issues = "https://github.com/venantvr/Python.Trading.Objects/issues"
Changelog = "https://github.com/venantvr/Python.Trading.Objects/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "python_trading_objects*",
]
exclude = [
    "test*",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "test",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.black]
line-length = 88
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
]
include = "\\.pyi?$"
extend-exclude = "/(\n  # Directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.pytest_cache\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
